style divider on announcements

--- a/index.html
+++ b/index.html
@@ -114,17 +114,17 @@
                 <div class="announce-items">
                     <div class="announcement">
                         <h4>Site maintenance</h4>
-                        <p>Lancashire the big cheese cheesy grin. Cheesy grin airedale cow cheese slices red leicester cottage cheese fromage frais hard cheese. Cut the cheese cheese triangles cheese strings cottage cheese smelly cheese cheesy feet danish fontina cheesecake.</p>
+                        <p>Lancashire the big cheese cheesy grin. Cheesy grin airedale cow cheese slices red leicester cottage cheese fromage frais hard cheese...</p>
                         <hr>
                     </div>
                     <div class="announcement">
                         <h4>Community Share Day</h4>
-                        <p>Lancashire the big cheese cheesy grin. Cheesy grin airedale cow cheese slices red leicester cottage cheese fromage frais hard cheese. Cut the cheese cheese triangles cheese strings cottage cheese smelly cheese cheesy feet danish fontina cheesecake.</p>
+                        <p>Lancashire the big cheese cheesy grin. Cheesy grin airedale cow cheese slices red leicester...</p>
                         <hr>
                     </div>
                     <div class="announcement">
                         <h4>Updated Privacy Policy</h4>
-                        <p>Lancashire the big cheese cheesy grin. Cheesy grin airedale cow cheese slices red leicester cottage cheese fromage frais hard cheese. Cut the cheese cheese triangles cheese strings cottage cheese smelly cheese cheesy feet danish fontina cheesecake.</p>
+                        <p>Lancashire the big cheese cheesy grin. Cheesy grin airedale cow cheese slices red leicester cottage cheese fromage frais...</p>
                     </div>
                     
                 </div>
